--- a/templates/layout.ejs
+++ b/templates/layout.ejs
@@ -5,9 +5,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
         <script src='/js/vendor.js'></script>
         <script src='/js/classes.js'></script>
         <script src='/js/templates.js'></script>
+        <script>Objects.config.server_ip = '<%= server_ip%>';</script>
         <script src='/js/index.js'></script>
     </head>
     <body>    
