--- a/templates/layout.ejs
+++ b/templates/layout.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>WAB3</title>
+        <link rel="stylesheet" href="/css/styles.css"/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
@@ -17,7 +18,7 @@
         </div>
         <script type='text/babel'>
         $(document).ready(function() {
-            ReactDOM.render(React.createElement(<%= template%>Template,{entity: Objects['<%= guid%>']}),document.getElementById('content'));
+            ReactDOM.render(React.createElement(<%= template%>Template,<%- properties%>),document.getElementById('content'));
         });
         </script>
     </body>
